# gary

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  compose.yaml  cypress.config.ts  development.py  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yaml  tests.yaml
cypress/e2e/: main.cy.ts
deploy/k8s/: deployment.yaml  service.yaml
gary/: asgi.py  settings.py  urls.py  wsgi.py
gifter/: admin.py  apps.py  forms.py  graphql.py  models.py  signals.py  test_graphql.py  test_models.py  urls.py  utils.py  views.py
gifter/management/commands/: set_user_password.py
gifter/migrations/: 0001_initial.py  0002_groupinvitation.py  0003_groupinvitation_http_origin.py  0004_alter_groupinvitation_verification_code.py  0005_alter_claim_options_alter_groupinvitation_options_and_more.py  0006_wishlist_groups.py  0007_remove_wishlist_group.py
gifter/static/css/: main.css
gifter/templatetags/: gift_extras.py
scripts/: server
templates/: base.html  multi_link_widget_template.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  signup.html
templates/accounts/: profile.html
templates/gifter/: claim_confirm_delete.html  claim_form.html  claim_list.html  group_confirm_delete.html  group_detail.html  group_form.html  group_list.html  item_confirm_delete.html  item_form.html  wishlist_confirm_delete.html  wishlist_detail.html  wishlist_form.html  wishlist_list.html
templates/socialaccount/snippets/: provider_list.html
