[tool.poetry]
name = "gary"
version = "0.1.0"
description = ""
authors = ["Isaac Parker <isaac@linux.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-bootstrap-v5 = "^1.0.7"
whitenoise = "^5.3.0"
psycopg2-binary = "^2.9.2"
django-allauth = "^0.47.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
