[tool.poetry]
name = "gary"
version = "0.1.0"
description = ""
authors = ["Isaac Parker <isaac@linux.com>"]

[tool.poetry.dependencies]
python = "^3.10.10"
Django = "4.2.6"
django-bootstrap-v5 = "^1.0.7"
whitenoise = "^5.3.0"
psycopg2-binary = "^2.9.2"
django-allauth = "^0.47.0"
sendgrid = "^6.9.3"
daphne = "^3.0.2"
dj-database-url = {git = "https://github.com/parrotmac/dj-database-url"}
django-sendgrid-v5 = "^1.2.0"
sentry-sdk = "^1.5.1"
django = "4.1.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
